add activating user account with email verification link,after the registration

--- a/Brandless/templates/employee_list.html
+++ b/Brandless/templates/employee_list.html
@@ -40,7 +40,7 @@
            <td>{{ employee.position }}</td>
            <td>{{ employee.typeofwork }}</td>
            <td>
-              <a href="{% url 'update_form' employee.id %}" class="btn btn-outline-dark " ><i class="fa fa-pencil-square-o"></i>
+               <a href="{% url 'update_form' employee.id %}" class="btn btn-outline-dark " ><i class="fa fa-pencil-square-o"></i></a>
 
           </td>
           <td>
