--- a/Brandless/templates/register2.html
+++ b/Brandless/templates/register2.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-     <form action="register" method="post">
+     <form action="register" method="post" id="registration_form" >
          {% csrf_token %}
 
     <div class="main">
@@ -25,7 +25,7 @@
             <!-- <img src="images/signup-bg.jpg" alt=""> -->
             <div class="container">
                 <div class="signup-content">
-                    <form method="POST" id="signup-form" class="signup-form">
+                    <form   class="signup-form">
 
 
                         <h2 class="form-title">Create account</h2>
@@ -40,7 +40,8 @@
                             <input type="email" class="form-input" name="email"  placeholder="Your Email"/>
                         </div>
                          <div class="form-group">
-                            <input type="text" class="form-input" name="username"  placeholder="Enter UserName"/>
+                            <input type="text" class="form-input" name="username"  placeholder="Enter UserName" id="username"/>
+                             
                         </div>
 
 
@@ -79,8 +80,36 @@
 
 
     <!-- JS -->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+     {% block javascript %}
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script >
+     $("#username").keyup(function () {
+    var username = $(this).val();
+    var thisObject = this
+
+    $.ajax({
+        url: "{% url 'validate_username' %}",
+        dataType: 'json',
+        data: {
+            "username": username
+        },
+        success: function (data) {
+            $(thisObject).nextAll().remove();
+            if (data.is_taken) {
+                $(thisObject).after("<b style='color: red; '>&emsp;" + data.error_message + "</b>");
+            }
+        }
+    })
+});
+     </script>
+
+       <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+       <script src="{% static 'js/main.js' %}"></script>
+<!--       <script src="{% static 'login/js/main.js' %}"></script> another ajax method-->
+
+      {% endblock javascript %}
+
+</body>
 </html>
+
 
